fix z-index styling for fixed header, allow autoprefixer to add css vendor prefixes in gulp build

--- a/app/assets/css/id7-tweaks.less
+++ b/app/assets/css/id7-tweaks.less
@@ -1,5 +1,11 @@
 @import 'mixins';
 
+.mobile {
+  .fixed-header {
+   z-index: 101;
+  }
+}
+
 .fixed-header {
   position: fixed;
   top: 0;
