--- a/app/assets/css/tiles.less
+++ b/app/assets/css/tiles.less
@@ -7,7 +7,7 @@
   left: 0;
   right: 0;
   bottom: 44px;
-  z-index: 98;
+  z-index: 100;
 
   @media (min-width: @screen-sm-min) {
     top: 30%;
@@ -361,16 +361,12 @@
 }
 
 .slider-leave.slider-leave-active, .slider-appear, .slider-enter {
-  -webkit-transform: translate3d(-100%, 0, 0);
   transform: translate3d(-100%, 0, 0);
-
   visibility: hidden;
 }
 
 .slider-leave, .slider-appear.slider-appear-active, .slider-enter.slider-enter-active {
-  -webkit-transform: translate3d(0%, 0, 0);
   transform: translate3d(0%, 0, 0);
-
   visibility: initial;
   min-width: 100%;
   min-height: 100%;
@@ -378,10 +374,6 @@
   top: 0;
   will-change: transform;
   z-index: 100;
-
-  -webkit-transition: -webkit-transform 0.3s ease-in-out, visibility 0.3s ease-in-out;
-  -moz-transition: transform 0.3s ease-in-out, visibility 0.3s ease-in-out;
-  -o-transition: transform 0.3s ease-in-out, visibility 0.3s ease-in-out;
   transition: transform 0.3s ease-in-out, visibility 0.3s ease-in-out;
 }
 
